lib/lib_mlx_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for `src/lib_mlx.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class LibMlxBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  LibMlxBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  LibMlxBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Loads a local model path and returns a JSON result:
  /// {"ok":true,"handle":1,"status":"ready","model_id":"..."}.
  ///
  /// The v1 inference path is HTTP-only. FFI is reserved for model/server
  /// lifecycle management and returns retained JSON strings that callers must free
  /// with lib_mlx_free.
  ffi.Pointer<ffi.Char> lib_mlx_load_model(ffi.Pointer<ffi.Char> config_json) {
    return _lib_mlx_load_model(config_json);
  }

  late final _lib_mlx_load_modelPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
        >
      >('lib_mlx_load_model');
  late final _lib_mlx_load_model = _lib_mlx_load_modelPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>();

  /// Starts the localhost OpenAI-compatible server for a loaded model handle.
  ffi.Pointer<ffi.Char> lib_mlx_start_server(
    int handle,
    ffi.Pointer<ffi.Char> config_json,
  ) {
    return _lib_mlx_start_server(handle, config_json);
  }

  late final _lib_mlx_start_serverPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Int64, ffi.Pointer<ffi.Char>)
        >
      >('lib_mlx_start_server');
  late final _lib_mlx_start_server = _lib_mlx_start_serverPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(int, ffi.Pointer<ffi.Char>)>();

  /// Stops the server attached to a loaded model handle.
  ffi.Pointer<ffi.Char> lib_mlx_stop_server(int handle) {
    return _lib_mlx_stop_server(handle);
  }

  late final _lib_mlx_stop_serverPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int64)>>(
        'lib_mlx_stop_server',
      );
  late final _lib_mlx_stop_server = _lib_mlx_stop_serverPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  /// Returns JSON model/server status for a loaded model handle.
  ffi.Pointer<ffi.Char> lib_mlx_server_status(int handle) {
    return _lib_mlx_server_status(handle);
  }

  late final _lib_mlx_server_statusPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int64)>>(
        'lib_mlx_server_status',
      );
  late final _lib_mlx_server_status = _lib_mlx_server_statusPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  /// Stops any server and unloads the resident model handle.
  ffi.Pointer<ffi.Char> lib_mlx_unload_model(int handle) {
    return _lib_mlx_unload_model(handle);
  }

  late final _lib_mlx_unload_modelPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int64)>>(
        'lib_mlx_unload_model',
      );
  late final _lib_mlx_unload_model = _lib_mlx_unload_modelPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  /// Frees strings returned from lib_mlx_* functions.
  void lib_mlx_free(ffi.Pointer<ffi.Void> ptr) {
    return _lib_mlx_free(ptr);
  }

  late final _lib_mlx_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'lib_mlx_free',
      );
  late final _lib_mlx_free = _lib_mlx_freePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();
}
